NanoVG/nanovg.h

	typedef struct NVGcontext NVGcontext;
	struct NVGcolor {
		union {
			float rgba[4];
			struct {
				float r, g, b, a;
			};
		};
	};
	typedef struct NVGcolor NVGcolor;
	struct NVGpaint {
		float xform[6];
		float extent[2];
		float radius;
		float feather;
		NVGcolor innerColor;
		NVGcolor outerColor;
		int image;
	};
	typedef struct NVGpaint NVGpaint;
	// Sets the transform to rotate matrix. Angle is specified in radians.
	NANOVG_EXPORT void nvgTransformRotate(float* dst, float a);
	// Sets the transform to skew-x matrix. Angle is specified in radians.
	NANOVG_EXPORT void nvgTransformSkewX(float* dst, float a);
	// Sets the transform to skew-y matrix. Angle is specified in radians.
	NANOVG_EXPORT void nvgTransformSkewY(float* dst, float a);
	// Sets the transform to the result of multiplication of two transforms, of A = A*B.
	NANOVG_EXPORT void nvgTransformMultiply(float* dst, const float* src);
	// Sets the transform to the result of multiplication of two transforms, of A = B*A.
	NANOVG_EXPORT void nvgTransformPremultiply(float* dst, const float* src);
	// Sets the destination to inverse of specified transform.
	// Returns 1 if the inverse could be calculated, else 0.
	NANOVG_EXPORT int nvgTransformInverse(float* dst, const float* src);
	// Transform a point by given transform.
	NANOVG_EXPORT void nvgTransformPoint(float* dstx, float* dsty, const float* xform, float srcx, float srcy);
	// Converts degrees to radians and vice versa.
	NANOVG_EXPORT float nvgDegToRad(float deg);
	NANOVG_EXPORT float nvgRadToDeg(float rad);
	//
	// Images
	//
	// NanoVG allows you to load jpg, png, psd, tga, pic and gif files to be used for rendering.
	// In addition you can upload your own image. The image loading is provided by stb_image.
	// The parameter imageFlags is combination of flags defined in NVGimageFlags.

	// Creates image by loading it from the disk from specified file name.
	// Returns handle to the image.
	NANOVG_EXPORT int nvgCreateImage(NVGcontext* ctx, const char* filename, int imageFlags);
	// Creates image by loading it from the specified chunk of memory.
	// Returns handle to the image.
	NANOVG_EXPORT int nvgCreateImageMem(NVGcontext* ctx, int imageFlags, unsigned char* data, int ndata);
	// Creates image from specified image data.
	// Returns handle to the image.
	NANOVG_EXPORT 	int nvgCreateImageRGBA(NVGcontext* ctx, int w, int h, int imageFlags, const unsigned char* data);
	// Updates image data specified by image handle.
	NANOVG_EXPORT void nvgUpdateImage(NVGcontext* ctx, int image, const unsigned char* data);
	// Returns the dimensions of a created image.
	NANOVG_EXPORT void nvgImageSize(NVGcontext* ctx, int image, int* w, int* h);
	// Deletes created image.
	NANOVG_EXPORT 	void nvgDeleteImage(NVGcontext* ctx, int image);
	//
	// Paints
	//
	// NanoVG supports four types of paints: linear gradient, box gradient, radial gradient and image pattern.
	// These can be used as paints for strokes and fills.

	// Creates and returns a linear gradient. Parameters (sx,sy)-(ex,ey) specify the start and end coordinates
	// of the linear gradient, icol specifies the start color and ocol the end color.
	// The gradient is transformed by the current transform when it is passed to nvgFillPaint() or nvgStrokePaint().
	NANOVG_EXPORT NVGpaint nvgLinearGradient(NVGcontext* ctx, float sx, float sy, float ex, float ey,
		NVGcolor icol, NVGcolor ocol);
	// Creates and returns a box gradient. Box gradient is a feathered rounded rectangle, it is useful for rendering
	// drop shadows or highlights for boxes. Parameters (x,y) define the top-left corner of the rectangle,
	// (w,h) define the size of the rectangle, r defines the corner radius, and f feather. Feather defines how blurry
	// the border of the rectangle is. Parameter icol specifies the inner color and ocol the outer color of the gradient.
	// The gradient is transformed by the current transform when it is passed to nvgFillPaint() or nvgStrokePaint().
	NANOVG_EXPORT NVGpaint nvgBoxGradient(NVGcontext* ctx, float x, float y, float w, float h,
		float r, float f, NVGcolor icol, NVGcolor ocol);
	// Creates and returns a radial gradient. Parameters (cx,cy) specify the center, inr and outr specify
	// the inner and outer radius of the gradient, icol specifies the start color and ocol the end color.
	// The gradient is transformed by the current transform when it is passed to nvgFillPaint() or nvgStrokePaint().
	NANOVG_EXPORT NVGpaint nvgRadialGradient(NVGcontext* ctx, float cx, float cy, float inr, float outr,
		NVGcolor icol, NVGcolor ocol);
	// Creates and returns an image patter. Parameters (ox,oy) specify the left-top location of the image pattern,
	// (ex,ey) the size of one image, angle rotation around the top-left corner, image is handle to the image to render.
	// The gradient is transformed by the current transform when it is passed to nvgFillPaint() or nvgStrokePaint().
	NANOVG_EXPORT NVGpaint nvgImagePattern(NVGcontext* ctx, float ox, float oy, float ex, float ey,
		float angle, int image, float alpha);
	//
	// Scissoring
	//
	// Scissoring allows you to clip the rendering into a rectangle. This is useful for various
	// user interface cases like rendering a text edit or a timeline.

	// Sets the current scissor rectangle.
	// The scissor rectangle is transformed by the current transform.
	NANOVG_EXPORT void nvgScissor(NVGcontext* ctx, float x, float y, float w, float h);
	// Intersects current scissor rectangle with the specified rectangle.
	// The scissor rectangle is transformed by the current transform.
	// Note: in case the rotation of previous scissor rect differs from
	// the current one, the intersection will be done between the specified
	// rectangle and the previous scissor rectangle transformed in the current
	// transform space. The resulting shape is always rectangle.
	NANOVG_EXPORT void nvgIntersectScissor(NVGcontext* ctx, float x, float y, float w, float h);
	// Reset and disables scissoring.
	NANOVG_EXPORT void nvgResetScissor(NVGcontext* ctx);
	//
	// Paths
	//
	// Drawing a new shape starts with nvgBeginPath(), it clears all the currently defined paths.
	// Then you define one or more paths and sub-paths which describe the shape. The are functions
	// to draw common shapes like rectangles and circles, and lower level step-by-step functions,
	// which allow to define a path curve by curve.
	//
	// NanoVG uses even-odd fill rule to draw the shapes. Solid shapes should have counter clockwise
	// winding and holes should have counter clockwise order. To specify winding of a path you can
	// call nvgPathWinding(). This is useful especially for the common shapes, which are drawn CCW.
	//
	// Finally you can fill the path using current fill style by calling nvgFill(), and stroke it
	// with current stroke style by calling nvgStroke().
	//
	// The curve segments and sub-paths are transformed by the current transform.

	// Clears the current path and sub-paths.
	NANOVG_EXPORT void nvgBeginPath(NVGcontext* ctx);
	// Starts new sub-path with specified point as first point.
	NANOVG_EXPORT void nvgMoveTo(NVGcontext* ctx, float x, float y);
	// Adds line segment from the last point in the path to the specified point.
	NANOVG_EXPORT void nvgLineTo(NVGcontext* ctx, float x, float y);
	// Adds cubic bezier segment from last point in the path via two control points to the specified point.
	NANOVG_EXPORT void nvgBezierTo(NVGcontext* ctx, float c1x, float c1y, float c2x, float c2y, float x, float y);
	// Adds quadratic bezier segment from last point in the path via a control point to the specified point.
	NANOVG_EXPORT void nvgQuadTo(NVGcontext* ctx, float cx, float cy, float x, float y);
	// Adds an arc segment at the corner defined by the last path point, and two specified points.
	NANOVG_EXPORT void nvgArcTo(NVGcontext* ctx, float x1, float y1, float x2, float y2, float radius);
	// Closes current sub-path with a line segment.
	NANOVG_EXPORT void nvgClosePath(NVGcontext* ctx);
	// Sets the current sub-path winding, see NVGwinding and NVGsolidity.
	NANOVG_EXPORT void nvgPathWinding(NVGcontext* ctx, int dir);
	// Creates new circle arc shaped sub-path. The arc center is at cx,cy, the arc radius is r,
	// and the arc is drawn from angle a0 to a1, and swept in direction dir (NVG_CCW, or NVG_CW).
	// Angles are specified in radians.
	NANOVG_EXPORT void nvgArc(NVGcontext* ctx, float cx, float cy, float r, float a0, float a1, int dir);
	// Creates new rectangle shaped sub-path.
	NANOVG_EXPORT void nvgRect(NVGcontext* ctx, float x, float y, float w, float h);
	// Creates new rounded rectangle shaped sub-path.
	NANOVG_EXPORT void nvgRoundedRect(NVGcontext* ctx, float x, float y, float w, float h, float r);
	// Creates new rounded rectangle shaped sub-path with varying radii for each corner.
	NANOVG_EXPORT void nvgRoundedRectVarying(NVGcontext* ctx, float x, float y, float w, float h, float radTopLeft, float radTopRight, float radBottomRight, float radBottomLeft);
	// Creates new ellipse shaped sub-path.
	NANOVG_EXPORT void nvgEllipse(NVGcontext* ctx, float cx, float cy, float rx, float ry);
	// Creates new circle shaped sub-path.
	NANOVG_EXPORT void nvgCircle(NVGcontext* ctx, float cx, float cy, float r);
	// Fills the current path with current fill style.
	NANOVG_EXPORT void nvgFill(NVGcontext* ctx);
	// Fills the current path with current stroke style.
	NANOVG_EXPORT void nvgStroke(NVGcontext* ctx);
	//
	// Text
	//
	// NanoVG allows you to load .ttf files and use the font to render text.
	//
	// The appearance of the text can be defined by setting the current text style
	// and by specifying the fill color. Common text and font settings such as
	// font size, letter spacing and text align are supported. Font blur allows you
	// to create simple text effects such as drop shadows.
	//
	// At render time the font face can be set based on the font handles or name.
	//
	// Font measure functions return values in local space, the calculations are
	// carried in the same resolution as the final rendering. This is done because
	// the text glyph positions are snapped to the nearest pixels sharp rendering.
	//
	// The local space means that values are not rotated or scale as per the current
	// transformation. For example if you set font size to 12, which would mean that
	// line height is 16, then regardless of the current scaling and rotation, the
	// returned line height is always 16. Some measures may vary because of the scaling
	// since aforementioned pixel snapping.
	//
	// While this may sound a little odd, the setup allows you to always render the
	// same way regardless of scaling. I.e. following works regardless of scaling:
	//
	//		const char* txt = "Text me up.";
	//		nvgTextBounds(vg, x,y, txt, NULL, bounds);
	//		nvgBeginPath(vg);
	//		nvgRoundedRect(vg, bounds[0],bounds[1], bounds[2]-bounds[0], bounds[3]-bounds[1]);
	//		nvgFill(vg);
	//
	// Note: currently only solid color fill is supported for text.

	// Creates font by loading it from the disk from specified file name.
	// Returns handle to the font.
	NANOVG_EXPORT int nvgCreateFont(NVGcontext* ctx, const char* name, const char* filename);
	// Creates font by loading it from the specified memory chunk.
	// Returns handle to the font.
	NANOVG_EXPORT int nvgCreateFontMem(NVGcontext* ctx, const char* name, unsigned char* data, int ndata, int freeData);
	// Finds a loaded font of specified name, and returns handle to it, or -1 if the font is not found.
	NANOVG_EXPORT int nvgFindFont(NVGcontext* ctx, const char* name);
	// Adds a fallback font by handle.
	NANOVG_EXPORT int nvgAddFallbackFontId(NVGcontext* ctx, int baseFont, int fallbackFont);
	// Adds a fallback font by name.
	NANOVG_EXPORT int nvgAddFallbackFont(NVGcontext* ctx, const char* baseFont, const char* fallbackFont);
	// Sets the font size of current text style.
	NANOVG_EXPORT void nvgFontSize(NVGcontext* ctx, float size);
	// Sets the blur of current text style.
	NANOVG_EXPORT void nvgFontBlur(NVGcontext* ctx, float blur);