Libraria.NanoVG/NanoVG.cs


		[DllImport(DllName, EntryPoint = "nvgTransformRotate", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformRotate(float[] dst, float a);
		// NANOVG_EXPORT void nvgTransformRotate(float* dst, float a);

		[DllImport(DllName, EntryPoint = "nvgTransformSkewX", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformSkewX(float[] dst, float a);
		// NANOVG_EXPORT void nvgTransformSkewX(float* dst, float a);

		[DllImport(DllName, EntryPoint = "nvgTransformSkewY", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformSkewY(float[] dst, float a);
		// NANOVG_EXPORT void nvgTransformSkewY(float* dst, float a);

		[DllImport(DllName, EntryPoint = "nvgTransformMultiply", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformMultiply(float[] dst, float[] src);
		// NANOVG_EXPORT void nvgTransformMultiply(float* dst, const float* src);

		[DllImport(DllName, EntryPoint = "nvgTransformPremultiply", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformPremultiply(float[] dst, float[] src);
		// NANOVG_EXPORT void nvgTransformPremultiply(float* dst, const float* src);

		[DllImport(DllName, EntryPoint = "nvgTransformInverse", CallingConvention = CConv, CharSet = CSet)]
		public static extern int TransformInverse(float[] dst, float[] src);
		// NANOVG_EXPORT int nvgTransformInverse(float* dst, const float* src);

		[DllImport(DllName, EntryPoint = "nvgTransformPoint", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformPoint(float[] dstx, float[] dsty, float[] xform, float srcx, float srcy);
		// NANOVG_EXPORT void nvgTransformPoint(float* dstx, float* dsty, const float* xform, float srcx, float srcy);

		[DllImport(DllName, EntryPoint = "nvgDegToRad", CallingConvention = CConv, CharSet = CSet)]
		public static extern float DegToRad(float deg);
		// NANOVG_EXPORT float nvgDegToRad(float deg);

		[DllImport(DllName, EntryPoint = "nvgRadToDeg", CallingConvention = CConv, CharSet = CSet)]
		public static extern float RadToDeg(float rad);
		// NANOVG_EXPORT float nvgRadToDeg(float rad);

		[DllImport(DllName, EntryPoint = "nvgCreateImage", CallingConvention = CConv, CharSet = CSet)]
		public static extern int CreateImage(IntPtr ctx, string filename, int imageFlags);
		// NANOVG_EXPORT int nvgCreateImage(IntPtr ctx, const char* filename, int imageFlags);

		[DllImport(DllName, EntryPoint = "nvgCreateImageMem", CallingConvention = CConv, CharSet = CSet)]
		public static extern int CreateImageMem(IntPtr ctx, int imageFlags, byte[] data, int ndata);
		// NANOVG_EXPORT int nvgCreateImageMem(IntPtr ctx, int imageFlags, unsigned char* data, int ndata);

		[DllImport(DllName, EntryPoint = "nvgCreateImageRGBA", CallingConvention = CConv, CharSet = CSet)]
		public static extern int CreateImageRGBA(IntPtr ctx, int w, int h, int imageFlags, byte[] data);
		// NANOVG_EXPORT 	int nvgCreateImageRGBA(IntPtr ctx, int w, int h, int imageFlags, const unsigned char* data);

		[DllImport(DllName, EntryPoint = "nvgUpdateImage", CallingConvention = CConv, CharSet = CSet)]
		public static extern void UpdateImage(IntPtr ctx, int image, byte[] data);
		// NANOVG_EXPORT void nvgUpdateImage(IntPtr ctx, int image, const unsigned char* data);

		[DllImport(DllName, EntryPoint = "nvgImageSize", CallingConvention = CConv, CharSet = CSet)]
		public static extern void ImageSize(IntPtr ctx, int image, int[] w, int[] h);
		// NANOVG_EXPORT void nvgImageSize(IntPtr ctx, int image, int* w, int* h);

		[DllImport(DllName, EntryPoint = "nvgDeleteImage", CallingConvention = CConv, CharSet = CSet)]
		public static extern void DeleteImage(IntPtr ctx, int image);
		// NANOVG_EXPORT 	void nvgDeleteImage(IntPtr ctx, int image);

		[DllImport(DllName, EntryPoint = "nvgLinearGradient", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGpaint LinearGradient(IntPtr ctx, float sx, float sy, float ex, float ey, NVGcolor icol, NVGcolor ocol);
		// NANOVG_EXPORT NVGpaint nvgLinearGradient(IntPtr ctx, float sx, float sy, float ex, float ey,  		NVGcolor icol, NVGcolor ocol);

		[DllImport(DllName, EntryPoint = "nvgBoxGradient", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGpaint BoxGradient(IntPtr ctx, float x, float y, float w, float h, float r, float f, NVGcolor icol, NVGcolor ocol);
		// NANOVG_EXPORT NVGpaint nvgBoxGradient(IntPtr ctx, float x, float y, float w, float h,  		float r, float f, NVGcolor icol, NVGcolor ocol);

		[DllImport(DllName, EntryPoint = "nvgRadialGradient", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGpaint RadialGradient(IntPtr ctx, float cx, float cy, float inr, float outr, NVGcolor icol, NVGcolor ocol);
		// NANOVG_EXPORT NVGpaint nvgRadialGradient(IntPtr ctx, float cx, float cy, float inr, float outr,  		NVGcolor icol, NVGcolor ocol);

		[DllImport(DllName, EntryPoint = "nvgImagePattern", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGpaint ImagePattern(IntPtr ctx, float ox, float oy, float ex, float ey, float angle, int image, float alpha);
		// NANOVG_EXPORT NVGpaint nvgImagePattern(IntPtr ctx, float ox, float oy, float ex, float ey,  		float angle, int image, float alpha);

		[DllImport(DllName, EntryPoint = "nvgScissor", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Scissor(IntPtr ctx, float x, float y, float w, float h);
		// NANOVG_EXPORT void nvgScissor(IntPtr ctx, float x, float y, float w, float h);

		[DllImport(DllName, EntryPoint = "nvgIntersectScissor", CallingConvention = CConv, CharSet = CSet)]
		public static extern void IntersectScissor(IntPtr ctx, float x, float y, float w, float h);
		// NANOVG_EXPORT void nvgIntersectScissor(IntPtr ctx, float x, float y, float w, float h);

		[DllImport(DllName, EntryPoint = "nvgResetScissor", CallingConvention = CConv, CharSet = CSet)]
		public static extern void ResetScissor(IntPtr ctx);
		// NANOVG_EXPORT void nvgResetScissor(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgBeginPath", CallingConvention = CConv, CharSet = CSet)]
		public static extern void BeginPath(IntPtr ctx);
		// NANOVG_EXPORT void nvgBeginPath(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgMoveTo", CallingConvention = CConv, CharSet = CSet)]
		public static extern void MoveTo(IntPtr ctx, float x, float y);
		// NANOVG_EXPORT void nvgMoveTo(IntPtr ctx, float x, float y);

		[DllImport(DllName, EntryPoint = "nvgLineTo", CallingConvention = CConv, CharSet = CSet)]
		public static extern void LineTo(IntPtr ctx, float x, float y);
		// NANOVG_EXPORT void nvgLineTo(IntPtr ctx, float x, float y);

		[DllImport(DllName, EntryPoint = "nvgBezierTo", CallingConvention = CConv, CharSet = CSet)]
		public static extern void BezierTo(IntPtr ctx, float c1x, float c1y, float c2x, float c2y, float x, float y);
		// NANOVG_EXPORT void nvgBezierTo(IntPtr ctx, float c1x, float c1y, float c2x, float c2y, float x, float y);

		[DllImport(DllName, EntryPoint = "nvgQuadTo", CallingConvention = CConv, CharSet = CSet)]
		public static extern void QuadTo(IntPtr ctx, float cx, float cy, float x, float y);
		// NANOVG_EXPORT void nvgQuadTo(IntPtr ctx, float cx, float cy, float x, float y);

		[DllImport(DllName, EntryPoint = "nvgArcTo", CallingConvention = CConv, CharSet = CSet)]
		public static extern void ArcTo(IntPtr ctx, float x1, float y1, float x2, float y2, float radius);
		// NANOVG_EXPORT void nvgArcTo(IntPtr ctx, float x1, float y1, float x2, float y2, float radius);

		[DllImport(DllName, EntryPoint = "nvgClosePath", CallingConvention = CConv, CharSet = CSet)]
		public static extern void ClosePath(IntPtr ctx);
		// NANOVG_EXPORT void nvgClosePath(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgPathWinding", CallingConvention = CConv, CharSet = CSet)]
		public static extern void PathWinding(IntPtr ctx, int dir);
		// NANOVG_EXPORT void nvgPathWinding(IntPtr ctx, int dir);

		[DllImport(DllName, EntryPoint = "nvgArc", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Arc(IntPtr ctx, float cx, float cy, float r, float a0, float a1, int dir);
		// NANOVG_EXPORT void nvgArc(IntPtr ctx, float cx, float cy, float r, float a0, float a1, int dir);

		[DllImport(DllName, EntryPoint = "nvgRect", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Rect(IntPtr ctx, float x, float y, float w, float h);
		// NANOVG_EXPORT void nvgRect(IntPtr ctx, float x, float y, float w, float h);

		[DllImport(DllName, EntryPoint = "nvgRoundedRect", CallingConvention = CConv, CharSet = CSet)]
		public static extern void RoundedRect(IntPtr ctx, float x, float y, float w, float h, float r);
		// NANOVG_EXPORT void nvgRoundedRect(IntPtr ctx, float x, float y, float w, float h, float r);

		[DllImport(DllName, EntryPoint = "nvgRoundedRectVarying", CallingConvention = CConv, CharSet = CSet)]
		public static extern void RoundedRectVarying(IntPtr ctx, float x, float y, float w, float h, float radTopLeft, float radTopRight, float radBottomRight, float radBottomLeft);
		// NANOVG_EXPORT void nvgRoundedRectVarying(IntPtr ctx, float x, float y, float w, float h, float radTopLeft, float radTopRight, float radBottomRight, float radBottomLeft);

		[DllImport(DllName, EntryPoint = "nvgEllipse", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Ellipse(IntPtr ctx, float cx, float cy, float rx, float ry);
		// NANOVG_EXPORT void nvgEllipse(IntPtr ctx, float cx, float cy, float rx, float ry);

		[DllImport(DllName, EntryPoint = "nvgCircle", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Circle(IntPtr ctx, float cx, float cy, float r);
		// NANOVG_EXPORT void nvgCircle(IntPtr ctx, float cx, float cy, float r);

		[DllImport(DllName, EntryPoint = "nvgFill", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Fill(IntPtr ctx);
		// NANOVG_EXPORT void nvgFill(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgStroke", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Stroke(IntPtr ctx);
		// NANOVG_EXPORT void nvgStroke(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgCreateFont", CallingConvention = CConv, CharSet = CSet)]
		public static extern int CreateFont(IntPtr ctx, string name, string filename);
		// NANOVG_EXPORT int nvgCreateFont(IntPtr ctx, const char* name, const char* filename);

		[DllImport(DllName, EntryPoint = "nvgCreateFontMem", CallingConvention = CConv, CharSet = CSet)]
		public static extern int CreateFontMem(IntPtr ctx, string name, byte[] data, int ndata, int freeData);
		// NANOVG_EXPORT int nvgCreateFontMem(IntPtr ctx, const char* name, unsigned char* data, int ndata, int freeData);

		[DllImport(DllName, EntryPoint = "nvgFindFont", CallingConvention = CConv, CharSet = CSet)]
		public static extern int FindFont(IntPtr ctx, string name);
		// NANOVG_EXPORT int nvgFindFont(IntPtr ctx, const char* name);

		[DllImport(DllName, EntryPoint = "nvgAddFallbackFontId", CallingConvention = CConv, CharSet = CSet)]
		public static extern int AddFallbackFontId(IntPtr ctx, int baseFont, int fallbackFont);
		// NANOVG_EXPORT int nvgAddFallbackFontId(IntPtr ctx, int baseFont, int fallbackFont);

		[DllImport(DllName, EntryPoint = "nvgAddFallbackFont", CallingConvention = CConv, CharSet = CSet)]
		public static extern int AddFallbackFont(IntPtr ctx, string baseFont, string fallbackFont);
		// NANOVG_EXPORT int nvgAddFallbackFont(IntPtr ctx, const char* baseFont, const char* fallbackFont);

		[DllImport(DllName, EntryPoint = "nvgFontSize", CallingConvention = CConv, CharSet = CSet)]
		public static extern void FontSize(IntPtr ctx, float size);
		// NANOVG_EXPORT void nvgFontSize(IntPtr ctx, float size);

		[DllImport(DllName, EntryPoint = "nvgFontBlur", CallingConvention = CConv, CharSet = CSet)]
		public static extern void FontBlur(IntPtr ctx, float blur);
		// NANOVG_EXPORT void nvgFontBlur(IntPtr ctx, float blur);
